<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Check-in for Good</string>
    <string name="business_all">All</string>
    <string name="business_arrow">Arrow</string>
    <string name="business_checkin">CHECK-IN FOR GOOD!</string>
    <string name="business_checkin_address">Business Address\n</string>
    <string name="business_checkin_map">MAP</string>
    <string name="business_checkin_name">Business Name</string>
    <string name="business_checkin_offer">Business offer</string>
    <string name="business_checkin_private">Private Check-in\n you raise\n $2</string>
    <string name="business_checkin_public">Public Check-in\n you raise\n $2</string>
    <string name="business_checkin_share">Share with friends</string>
    <string name="business_list_address">Address</string>
    <string name="business_list_distance">Distance</string>
    <string name="business_list_miles">mi</string>
    <string name="business_none">No businesses found.</string>
    <string name="business_support">Which organization would you like to support with this Check-in?</string>
    <string name="business_supporting">Supporting My Causes</string>
    <string name="business_reservation">Make a reservation >></string>
    <string name="cause_learn">Learn how Check-in for Good works</string>
    <string name="cause_location_not_found">We were unable to find your location.  We use your location to find local causes in your area.  Please check that your GPS settings are turned on and functioning.  Try &lt;u>searching&lt;/u> for causes instead.</string>
    <string name="cause_none">No Causes found.</string>
    <string name="cause_support">Tap to check the causes below that\nyou want to support.</string>
    <string name="checkin_false">Check-in failed!</string>
    <string name="checkin_find">Tap the Business tab to find more Check-ins.</string>
    <string name="checkin_GPS_error">Your GPS shows you as too far from the business location to check-in.</string>
    <string name="create">Create</string>
    <string name="create_account">Create Account</string>
    <string name="create_first_name">First Name</string>
    <string name="create_last_name">Last Name</string>
    <string name="desc_check">Checkbox</string>
    <string name="desc_swipe">Hello World, CheckinNativeActivity!</string>
    <string name="forgot_email">Enter Your Email Address</string>
    <string name="forgot_notification">Send Notification</string>
    <string name="hello">Hello World, CheckinNativeActivity!</string>
    <string name="how_it_works">How it Works</string>
    <string name="how_it_works_business_tap">Tap &lt;b>\'Businesses\'&lt;/b> to find great deals around you and raise money for causes at the same time.</string>
    <string name="how_it_works_business_find">Once you find a business, Check-in to redeem the offer and that business will donate  money to the cause.</string>
    <string name="how_it_works_cause_tap">&lt;br>&lt;/br>Tap the &lt;b>\'Causes\'&lt;/b> tab to find specific causes to support. &lt;br>&lt;/br> &lt;br>&lt;/br> &lt;br>&lt;/br> You can choose as many or as few you want. Do good.</string>
    <string name="how_it_works_find_cause">Find Causes >></string>
    <string name="how_it_works_find_business">Find businesses >></string>
    <string name="how_it_works_overview">Watch the overview</string>
    <string name="how_it_works_scan">Some businesses require customers to scan a code  when checking in.</string>
    <string name="how_it_works_share">Setup your Facebook and Twitter accounts so you can tell others about the money you\'re raising</string>
    <string name="how_it_works_snap_top">If required, when you check-in, the app will open your camera.</string>
    <string name="how_it_works_snap_bottom">Just point your phone at the SNAP code that the business displays and your check-in will be complete.</string>
    <string name="how_it_works_swipe">Swipe for the next tip >></string>
    <string name="label">Check-in for Good</string>
    <string name="login_create">Create Account</string>
    <string name="login_do_good">Do good</string>
    <string name="login_email">Email Address</string>
    <string name="login_forgot">Forgot Your Password?</string>
    <string name="login_password">Password</string>
    <string name="login_sign">Sign-in</string>
    <string name="login_start">Start raising money</string>
    <string name="raised">You\'ve raised: $0.000</string>
    <string name="searched">You searched: </string>
    <string name="search_hint">Search</string>
    <string name="search_label">Search</string>
    <string name="thank_you">Thank you</string>
    <string name="business_Offer_valid">Offer Valid: </string>
    <string name="qrcode_snap">SNAP NOW</string>
    <string name="snapnow_page_text">This business requires customers to SNAP their code to check-in.</string>
    <string name="snapnow_page_text1">Look for the Check-in for Good SNAP display and tap the button below</string>
    <string name="snapnow_page_text2">This SNAP barcode isn\'t working. Please ask an employee for assistance or try snapping it again.</string>
    <string name="watch_video_overview">Watch Check-in for Good in action.</string>
    <string name="watch_video_text">It\'s easy to do good.</string>
    <string name="privacy_control">Privacy Controls</string>
    <string name="privacy_control_details">Don\'t want people knowing where you are? \nDelay when your check-in appears on social networks.</string>
    <string name="my_good">it\'s your good.</string>
    <string name="you_raised_text">You\'ve raised a pledge amount of:</string>
    <string name="your_checkin_text">Your Check-ins</string>
    <string name="causes_you_supporting">Causes You\'re Supporting</string>
    <string name="my_good_text">Thanks for doing good by supporting the businesses and causes that strengthen our communities.</string>
    <string name="waiting_for_twitter">Waiting for twitter to respond!</string>
    <string name="waiting_for_facebook">Waiting for facebook to respond!</string>
    <string name="sharing_your_checkin_text">Link your Facebook and/or Twitter accounts and share your check-in\'s. You\'ll raise more and share the good you\'re doing. \n\nDon\'t want others knowing where you are? Delay sharing so it shows up hours after you\'ve checked-in.</string>
    <string name="how_you_help_businesses">How you help businesses</string>
    <string name="how_you_help_causes">How you help causes</string>
    <string name="delink_acc"> De-link Account </string>
    <string name="delink_text">Logout and unlink account</string>
    <string name="how_it_works_business_header_text">Raise money and save by supporting local businesses</string>
    <string name="how_it_works_business_snap_checkin">SNAP Check-in\'s. They\'re quick and simple.</string>
    <string name="how_it_works_cause_header_text">Help a cause, or two, or more. Do Good.</string>
    <string name="how_it_works_sharing_settings_text">Sharing your Check-in is like doing double good.</string>
    <string name="supporters">Supporters</string>
    <string name="users">User(s)</string>
    <string name="businesses">Businesses</string>
    <string name="our_mission">Our Mission</string>
    <string name="social_have_account"> &lt;u>Already have an account? Sign in&lt;/u></string>
    <string name="tap_cause_msg">Tap to stop supporting this cause</string>

    <style name="Bold">bold</style>

    <style name="medtext">
        <item name="android:text">Medium Text</item>
        <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
        <item name="android:textColor">@color/black</item>
        <item name="android:textSize">8.5pt</item>
    </style>

    <string name="businessProgressMessage">Finding participating businesses near you.</string>
    <string name="causeProgressMessage">Finding causes near your area.</string>
    <string name="signInProgressMessage">Signing in... Please wait.</string>
    <string name="checkinProgressMessage">Checking-in</string>
    <string name="searchProgressMessage">"Searching.. Please wait</string>
    <string name="signupProgressMessage">Signing up.. Please wait</string>
    <string name="forgotPwdProgressMessage">Retrieving your password.. please wait</string>
    <string name="delinkProgressMessage">Unlink your account.. please wait</string>
    <string name="social_signup_text">Sign up with</string>
    <string name="social_signup_privacy_text">We will never post anything to your facebook or\n     twitter account without your permission.</string>
    <string name="social_signup_or">-OR-</string>
    <string name="social_signin_or_signup_text">Sign in / Sign up with</string>
    <string name="sharePrefProgressMessage">Fetching social credentials .. please wait</string>
    <string name="causesprofileProgressMessage">Fetching cause profile..</string>
    <string name="supportProgressMessage">Supporting cause..</string>
    <string name="unSupportProgressMessage">Unsupporting cause..</string>
    <string name="videosProgressMessage">Fetching videos..</string>
    <string name="launchCampaignProgressMessage">Launching campaign..</string>
    <string name="defaultMsg">Loading ..</string>
    <string name="social_signin_privacy_text">We will never post anything to your facebook account without your permission.</string>
    <!-- Heads UP -->
    <string name="powered_by">POWERED BY CHECK-IN FOR GOOD</string>
    <string name="supportusafootballmessage">Businesses and youth leagues interested in\n participating and reaching the football\n community can sign-up for free at</string>
    <string name="you_checkedin">You\'ve Checked-in</string>
    <string name="show_barcode">Show the bar code below to the cashier</string>
    <string name="no_barcode">No Offer</string>
    

</resources>