<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

     <LinearLayout  android:id="@+id/linearLHowIt"
        android:layout_width="fill_parent"
        android:layout_height="25dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true" >

        <ImageView
            android:id="@+id/img_hiw_slider_panel1"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/desc_swipe"
            android:gravity="center_horizontal"
            android:paddingRight="3dp"
            android:src="@drawable/c4g_videoicon" />

        <ImageView
            android:id="@+id/img_hiw_slider_panel2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/desc_swipe"
            android:gravity="center_horizontal"
            android:paddingRight="3dp"
            android:src="@drawable/c4g_slideicon" />

        <ImageView
            android:id="@+id/img_hiw_slider_panel3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/desc_swipe"
            android:gravity="center_horizontal"
            android:paddingRight="3dp"
            android:src="@drawable/c4g_slideicon" />

        <ImageView
            android:id="@+id/img_hiw_slider_panel4"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/desc_swipe"
            android:gravity="center_horizontal"
            android:paddingRight="3dp"
            android:src="@drawable/c4g_slideicon" />

        <ImageView
            android:id="@+id/img_hiw_slider_panel5"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/desc_swipe"
            android:gravity="center_horizontal"
            android:paddingRight="3dp"
            android:src="@drawable/c4g_slideicon" />

        <ImageView
            android:id="@+id/img_hiw_slider_panel6"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/desc_swipe"
            android:gravity="center_horizontal"
            android:paddingRight="3dp"
            android:src="@drawable/c4g_videoicon" />
    </LinearLayout>
    
    <ViewFlipper
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/flipper"
        android:layout_width="match_parent"
         android:layout_marginBottom="20dp"
        android:layout_height="wrap_content" 
        android:layout_above="@+id/linearLHowIt">

        <ScrollView
            android:id="@+id/scripScroll0"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout style="@style/howItWorksButton" >

                <ImageView
                    android:id="@+id/imageViewVideo"
                   android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:paddingTop="20dp"
                    android:layout_gravity="center_horizontal"
                     >
                </ImageView>

                <TextView
                    style="@style/howItWorksText"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="15dp"
                    android:text="@string/watch_video_overview"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    style="@style/howItWorksText"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/watch_video_text"
                    android:textColor="@color/black" />
            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:id="@+id/scripScroll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout style="@style/howItWorksLayout" >

                    <TextView
                        android:id="@+id/textBusinessTap"
                        style="@style/howItWorksText" />

                    <TextView
                        style="@style/howItWorksText"
                        android:paddingTop="18dp"
                        android:text="@string/how_it_works_business_find" />

                    <!--
                <LinearLayout style="@style/howItWorksButton" >
                </LinearLayout>
                    -->


                    <!--
                     <TextView
                    style="@style/howItWorksText"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="18dp"
                    android:text="@string/how_it_works_swipe"
                    android:textColor="@color/purple" />
                    -->

                </LinearLayout>

                <TextView
                    style="@style/howItWorksText"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/how_it_works_business_header_text"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:id="@+id/scripScroll2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout style="@style/howItWorksLayout" >

                    <TextView
                        style="@style/howItWorksText"
                        android:text="@string/how_it_works_scan" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1.0" >

                        <TextView
                            style="@style/howItWorksText"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:paddingTop="10dp"
                            android:text="@string/how_it_works_snap_top" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/how_it_works"
                            android:src="@drawable/howitworks_qr" />
                    </LinearLayout>

                    <TextView
                        style="@style/howItWorksText"
                        android:text="@string/how_it_works_snap_bottom" />
                </LinearLayout>

                <TextView
                    style="@style/howItWorksText"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:text="@string/how_it_works_business_snap_checkin"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:id="@+id/scripScroll3"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    style="@style/howItWorksLayout"
                    android:background="@drawable/howitworks_bg2" >

                    <TextView
                        android:id="@+id/textCauseTap"
                        style="@style/howItWorksText"
                        android:paddingTop="10dp" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="18dp"
                        android:visibility="gone" >

                        <TextView
                            android:id="@+id/textFindBusiness"
                            style="@style/howItWorksText"
                            android:text="@string/how_it_works_find_business"
                            android:textColor="@color/purple"
                            android:textSize="6pt" />

                        <TextView
                            android:id="@+id/textFindCause"
                            style="@style/howItWorksText"
                            android:layout_alignParentRight="true"
                            android:paddingLeft="2dp"
                            android:text="@string/how_it_works_find_cause"
                            android:textColor="@color/purple"
                            android:textSize="6pt" />
                    </RelativeLayout>
                </LinearLayout>

                <TextView
                    style="@style/howItWorksText"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:text="@string/how_it_works_cause_header_text"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:id="@+id/scripScroll4"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    style="@style/howItWorksLayout"
                    android:background="@drawable/howitworks_bg3" 
                    android:layout_height="280dp"
                    >

                    <TextView
                        style="@style/howItWorksText"
                        android:text="@string/sharing_your_checkin_text" />

                    <Button
                        android:id="@+id/btnSettingShare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/btn_setupsharing" />
                </LinearLayout>

                <TextView
                    style="@style/howItWorksText"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/how_it_works_sharing_settings_text"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:id="@+id/scripScroll5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout style="@style/howItWorksVideoPage" >

                <TextView
                    style="@style/howItWorksText"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/how_you_help_businesses"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageViewVideo2"
                    android:layout_width="250dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    >
                </ImageView>

                <TextView
                    style="@style/howItWorksText"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/how_you_help_causes"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageViewVideo3"
                    android:layout_width="250dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"               
                     >
                </ImageView>
            </LinearLayout>
        </ScrollView>
    </ViewFlipper>
</RelativeLayout>